[package]
name = "primtives"
version = "0.1.0"
authors = ["Amar Singh <asinghchrony@protonmail.com>"]
edition = "2018"

[dependencies]
blake2-rfc = { version = "0.2.18", optional = true }
ring = { version = "0.12", optional = true }
untrusted = { version = "0.5", optional = true }
twox-hash = { version = "1.1.0", optional = true }